app/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: challenge
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
