app/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: challenge
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
