app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: challenge
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 3000
